fix(home): fix to lazy img src on safari

--- a/src/pages/app-home/app-home.scss
+++ b/src/pages/app-home/app-home.scss
@@ -298,9 +298,11 @@
       }
 
       .phone-image {
-        height: 440px;
-        @include media-breakpoint-down(sm) {
-          height: auto;
+        img {
+          height: 440px;
+          @include media-breakpoint-down(sm) {
+            height: auto;
+          }
         }
       }
     }
